--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "express-csp-header": "^5.0.0",
     "nodemon": "^2.0.7",
-    "prettier": "^2.3.1"
+    "prettier": "^2.3.1",
+    "serve-favicon": "^2.5.0"
   }
 }
