--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-csp-header": "^5.0.0",
+    "express-favicon": "^2.0.1",
     "mongoose": "^5.12.13",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7",
