--- a/FrontEnd/bluebits/nx.json
+++ b/FrontEnd/bluebits/nx.json
@@ -27,12 +27,22 @@
     ]
   },
   "projects": {
+    "admin": {
+      "tags": []
+    },
+    "admin-e2e": {
+      "tags": [],
+      "implicitDependencies": ["admin"]
+    },
     "ngshop": {
       "tags": []
     },
     "ngshop-e2e": {
       "tags": [],
       "implicitDependencies": ["ngshop"]
+    },
+    "ui": {
+      "tags": []
     }
   }
 }
